// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image component Should be 32x32 1`] = `
<figure
  className="image is-32x32"
>
  <img
    src="http://mydomain.com/image"
  />
</figure>
`;

exports[`Image component Should be square 1`] = `
<figure
  className="image is-square"
>
  <img
    src="http://mydomain.com/image"
  />
</figure>
`;

exports[`Image component Should exist 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "defaultProps": Object {
    "renderAs": "figure",
  },
  "render": [Function],
}
`;

exports[`Image component Should have image classname 1`] = `
<figure
  className="image"
>
  <img
    src="http://mydomain.com/image"
  />
</figure>
`;
